--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>Var initilizes variables.
+              funtions are sections of code that are reusable by calling them later in the code.
+              console.log is how to get things to display in the console.
+          </li>
         </ul>
       </section>
     </main>
