fixed formatting issues found in JavaScript notes along with adding new notes to Git section

--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
         <h2>Git</h2>
         <ul>
           <li>git status: checks what branch we are currently on</li>
+          <li>git checkout branch name navigates user to branch without creating a new one</li>
+          <li>git pull origin main synchronizes both your local and remote main branches.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A add changes to repository</li>
+          <li>git commit -m "message goes here" allows user to add message onto commit</li>
+          <li>git push origin branch name pushes changes to rmote repository</li>
         </ul>
       </section>
 
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Var initilizes variables.
-              funtions are sections of code that are reusable by calling them later in the code.
-              console.log is how to get things to display in the console.
-          </li>
+          <li>Var initilizes variables.</li>
+          <li>Funcitons are sections of code that are reusable by calling them later in the code.</li> 
+          <li>console.log is how to get things to display in the console.</li> 
         </ul>
       </section>
     </main>
